Add table to bottom of chord diagnostic

--- a/diagnostic.html
+++ b/diagnostic.html
@@ -33,6 +33,18 @@
             </div>
             <div id="visualization"></div>
         </div>
+        <div id="table-container">
+            <table id="timing-table">
+                <thead>
+                    <tr>
+                        <th>Event</th>
+                        <th>Code</th>
+                        <th>Time</th>
+                    </tr>
+                </thead>
+                <tbody id="table-body"></tbody>
+            </table>
+        </div>
     </div>
     <script type='text/javascript' src='js/diagnostic.js'></script>
 
