Add a calculation of first to last press/release

--- a/diagnostic.html
+++ b/diagnostic.html
@@ -33,6 +33,10 @@
             </div>
             <div id="visualization"></div>
         </div>
+        <div id="timing-messages">
+            <p id="press-message"></p>
+            <p id="release-message"></p>
+        </div>
         <div id="table-container">
             <table id="timing-table">
                 <thead>
